style.css
:root {
	--theme:dark;
	--background-1: #1c1a1e;
	--background-2: #221f23;
	--foreground: #f7fff7;
	--button: #38B863;
	--secondary: #EF476F;
}

html{
	font-family: "Ubuntu", sans-serif;
	background-color: var(--background-1);
	color: var(--foreground);
	letter-spacing: 0.1rem;
	font-weight: 500;
	transition: .15s ease;
}

#container{
	display: grid;
	min-height: var(--viewport-height);
	padding: 1rem;
	padding-bottom: 2rem;
	
	grid-template-columns: 100%;
	grid-template-areas:
	"sidebar1"
	"main"
	"themeswitch"
	;
}

@media (min-width: 650px) {
	#container{
		display: grid;
		grid-template-columns: 15% 70%;
		grid-template-areas:
		"blank sidebar1"
		"blank main"
		"blank themeswitch"
		;
	}
}

@media (min-width: 1000px) {
	#container{
		display: grid;
		grid-template-columns: 25% 50%;
		grid-template-areas:
		"sidebar1 main"
		"blank themeswitch"
		;
	}
}

#main{
	grid-area: main;
	justify-self: center;
	width: 32rem;
	max-width: 100%;
	background-color: var(--background-2);
	display: flex;
	align-items: center;
	justify-content: center;
	text-align: center;
	border-radius: .75rem;
	margin-top: 1rem;
	margin-bottom: 1rem;
	border: .1rem solid var(--foreground)
}


#navbox{
	grid-area: sidebar1;
	background-color: var(--background-2);
	border-radius: .75rem;
	border: .1rem solid var(--foreground);
	line-height: 125%
}

@media (min-width: 1000px) {
	#navbox{
		width: 16rem;
		max-width: 60%;
		margin-top: 1rem;
		margin-bottom: 1rem;
	}
}

#inner{
	padding: 2rem;
}

#socials{
	display: none;
	list-style-type: none;
}

.banner{
	width: 100%;
	height: 100%;
	border-radius: .75rem
}

#home{
	text-align: left;
}

#aboutme{
	text-align: left;
}

#stuffimade{
	text-align: left
}

#siteinfo{
	line-height: 140%;
}

.itchbox{
	background-color: var(--background-1);
	display: block;
	border-radius: 0.75rem;
	padding: 0.5rem;
	margin-top: 0.5rem;
	margin-bottom: 0.5rem;
}

.itchbutton{
	text-decoration: none;
	text-align: center;
	display: block;
	color: var(--foreground);
	background: var(--button);
	padding: .75rem;
	border-radius: .75rem;
	cursor: pointer;
	transition: .25s ease;
	margin: 0;
}

.itchbutton:hover{
	-webkit-filter: brightness(120%);
	filter: brightness(120%);
	transform: scale(1.02);
}

.itchimage{
	height: 7rem;
	border-radius: .75rem;
	margin-right: 1rem;
	float: left
}

hr{
	border: .1rem solid var(--foreground);
	background: var(--foreground)
}

.list-button{
	display: inline-block;
	width: 100%;
}

.button-href{
	text-decoration: none;
	display: block;
	text-align: left;
	color: var(--foreground);
	background: var(--button);
	padding: .75rem;
	padding-left: 2rem;
	padding-right: 2rem;
	border-radius: .75rem;
	font-size: 20px;
	cursor: pointer;
	transition: .25s ease;
	margin: .5rem;
}

.button-href:hover{
	-webkit-filter: brightness(120%);
	filter: brightness(120%);
	transform: scale(1.02);
}

.button-logo{
	width: 2rem;
	display: block;
	float: right;
}

.themeswitch{
	grid-area: themeswitch;
	cursor: pointer;
	width: 2rem;
	justify-self: center;
}

.url {
	text-decoration: none;
	color: var(--foreground);
	position: relative;
}

.inlineurl{
	color: var(--secondary);
	white-space: nowrap;
}

.url::before {
	content: '';;
	position: absolute;
	width: 100%;
	height: 0.15rem;
	background-color: var(--button);
	bottom: 0;
	left: 0;
	transform-origin: right;
	transform: scaleX(0);
	transition: transform .3s ease-in-out;
}

.url:hover::before {
	transform-origin: left;
	transform: scaleX(1);
}

